@@ -1,3 +1,9 @@
+2008-08-27  Christophe Romain  <christophe.romain@process-one.net>
+
+	* src/mod_pubsub/mod_pubsub.erl: send last published events now
+	supports PEP events from unavailable users nodes (EJAB-698)
+	* src/ejabberd_c2s.erl: Likewise
+
 2008-08-26  Badlop  <badlop@process-one.net>
 
 	* doc/release_notes_2.0.2.txt: Update for final release
